deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cuseum
  namespace: cuseum
  labels:
    app: cuseum
spec:
  ingressClassName: traefik
  rules:
    - host: cuseum.swanno3o.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cuseum
                port:
                  number: 3000
